// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MergePrompt > snapshots > renders conflicts state correctly 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│ ⚠️  Merge Conflicts Detected                                                                     │
│ Branch: feature-conflicts                                                                        │
│ Manual resolution required. Check git status for details.                                        │
│                                                                                                  │
│ Press any key to continue...                                                                     │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`MergePrompt > snapshots > renders failed state correctly 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│ ❌ Merge Test Failed                                                                              │
│ Branch: feature-failed                                                                           │
│ Something went wrong                                                                             │
│                                                                                                  │
│ Press any key to continue...                                                                     │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`MergePrompt > snapshots > renders failed state without error correctly 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│ ❌ Merge Test Failed                                                                              │
│ Branch: feature-failed-no-error                                                                  │
│                                                                                                  │
│ Press any key to continue...                                                                     │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`MergePrompt > snapshots > renders ready state correctly 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│ 🌿 Merge Ready                                                                                   │
│ Branch: feature-xyz                                                                              │
│ No conflicts detected. The agent will merge and clean up the worktree.                           │
│                                                                                                  │
│ Approve merge? [y] Yes  [n] No                                                                   │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;
